--- a/examples/22-time-series/04-sarima.ipynb
+++ b/examples/22-time-series/04-sarima.ipynb
@@ -85,16 +85,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1957-05-01</th>\n",
-       "      <td>355</td>\n",
+       "      <th>1952-01-01</th>\n",
+       "      <td>171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1958-11-01</th>\n",
-       "      <td>310</td>\n",
+       "      <th>1958-05-01</th>\n",
+       "      <td>363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1955-06-01</th>\n",
-       "      <td>315</td>\n",
+       "      <th>1952-07-01</th>\n",
+       "      <td>230</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -103,9 +103,9 @@
       "text/plain": [
        "            values\n",
        "date              \n",
-       "1957-05-01     355\n",
-       "1958-11-01     310\n",
-       "1955-06-01     315"
+       "1952-01-01     171\n",
+       "1958-05-01     363\n",
+       "1952-07-01     230"
       ]
      },
      "metadata": {},
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
     }
    ],
    "source": [
-    "display( 'SARIMAX ({},{},{}), ({},{},{}), {}'.format(p,d,q,P,D,Q,S) )"
+    "display( 'SARIMA ({},{},{}), ({},{},{}), {}'.format(p,d,q,P,D,Q,S) )"
    ]
   },
   {
@@ -810,7 +810,9 @@
       "   22     50     58      1     0     0   1.757D-02  -1.734D+00\n",
       "  F =  -1.7341340097537334     \n",
       "\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT                 \n"
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT                 \n",
+      "CPU times: user 27.1 s, sys: 30.8 ms, total: 27.2 s\n",
+      "Wall time: 4.56 s\n"
      ]
     },
     {
@@ -819,14 +821,6 @@
      "text": [
       "/opt/venv/sevgu_1/lib/python3.11/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
       "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 27.6 s, sys: 10.2 ms, total: 27.6 s\n",
-      "Wall time: 4.69 s\n"
      ]
     }
    ],
@@ -858,8 +852,8 @@
       "============================================================================================\n",
       "Dep. Variable:                                  bcx   No. Observations:                  132\n",
       "Model:             SARIMAX(11, 1, 8)x(2, 1, [], 12)   Log Likelihood                 228.906\n",
-      "Date:                              Wed, 24 Apr 2024   AIC                           -413.811\n",
-      "Time:                                      19:17:09   BIC                           -352.671\n",
+      "Date:                              Fri, 26 Apr 2024   AIC                           -413.811\n",
+      "Time:                                      18:02:10   BIC                           -352.671\n",
       "Sample:                                  01-01-1949   HQIC                          -388.984\n",
       "                                       - 12-01-1959                                         \n",
       "Covariance Type:                                opg                                         \n",
@@ -1004,7 +998,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7600e431b590>"
+       "<matplotlib.legend.Legend at 0x73960aedcd10>"
       ]
      },
      "execution_count": 38,
@@ -1120,6 +1114,13 @@
     "ax.legend(loc='upper left')\n",
     "ax.grid()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
