--- a/examples/22-time-series/05-sarima-auto.ipynb
+++ b/examples/22-time-series/05-sarima-auto.ipynb
@@ -187,29 +187,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>1957-02</td>\n",
-       "      <td>301</td>\n",
+       "      <th>110</th>\n",
+       "      <td>1958-03</td>\n",
+       "      <td>362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>1953-02</td>\n",
-       "      <td>196</td>\n",
+       "      <th>106</th>\n",
+       "      <td>1957-11</td>\n",
+       "      <td>305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1949-11</td>\n",
-       "      <td>104</td>\n",
+       "      <th>28</th>\n",
+       "      <td>1951-05</td>\n",
+       "      <td>172</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Month  #Passengers\n",
-       "97  1957-02          301\n",
-       "49  1953-02          196\n",
-       "10  1949-11          104"
+       "       Month  #Passengers\n",
+       "110  1958-03          362\n",
+       "106  1957-11          305\n",
+       "28   1951-05          172"
       ]
      },
      "metadata": {},
@@ -260,16 +260,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1957-05-01</th>\n",
+       "      <th>1956-01-01</th>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959-03-01</th>\n",
+       "      <td>406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1956-09-01</th>\n",
        "      <td>355</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1955-09-01</th>\n",
-       "      <td>312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-10-01</th>\n",
-       "      <td>359</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,9 +278,9 @@
       "text/plain": [
        "            #Passengers\n",
        "ts                     \n",
-       "1957-05-01          355\n",
-       "1955-09-01          312\n",
-       "1958-10-01          359"
+       "1956-01-01          284\n",
+       "1959-03-01          406\n",
+       "1956-09-01          355"
       ]
      },
      "metadata": {},
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -506,59 +506,33 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(1,0,1)(0,1,1)[12] intercept   : AIC=-447.280, Time=0.97 sec\n",
-      " ARIMA(0,0,0)(0,1,0)[12] intercept   : AIC=-317.949, Time=0.04 sec\n",
-      " ARIMA(1,0,0)(1,1,0)[12] intercept   : AIC=-433.027, Time=0.40 sec\n",
-      " ARIMA(0,0,1)(0,1,1)[12] intercept   : AIC=-383.189, Time=0.29 sec\n",
+      " ARIMA(1,0,1)(0,1,1)[12] intercept   : AIC=-447.280, Time=0.90 sec\n",
+      " ARIMA(0,0,0)(0,1,0)[12] intercept   : AIC=-317.949, Time=0.03 sec\n",
+      " ARIMA(1,0,0)(1,1,0)[12] intercept   : AIC=-433.027, Time=0.37 sec\n",
+      " ARIMA(0,0,1)(0,1,1)[12] intercept   : AIC=-383.189, Time=0.28 sec\n",
       " ARIMA(0,0,0)(0,1,0)[12]             : AIC=-134.983, Time=0.01 sec\n",
       " ARIMA(1,0,1)(0,1,0)[12] intercept   : AIC=-416.167, Time=0.14 sec\n",
-      " ARIMA(1,0,1)(1,1,1)[12] intercept   : AIC=-444.966, Time=0.64 sec\n",
-      " ARIMA(1,0,1)(0,1,2)[12] intercept   : AIC=-445.305, Time=1.13 sec\n",
-      " ARIMA(1,0,1)(1,1,0)[12] intercept   : AIC=-439.764, Time=0.58 sec\n",
-      " ARIMA(1,0,1)(1,1,2)[12] intercept   : AIC=inf, Time=1.39 sec\n",
-      " ARIMA(1,0,0)(0,1,1)[12] intercept   : AIC=-442.847, Time=0.45 sec\n",
-      " ARIMA(2,0,1)(0,1,1)[12] intercept   : AIC=-446.292, Time=0.48 sec\n",
-      " ARIMA(1,0,2)(0,1,1)[12] intercept   : AIC=-445.571, Time=0.65 sec\n",
+      " ARIMA(1,0,1)(1,1,1)[12] intercept   : AIC=-444.966, Time=0.60 sec\n",
+      " ARIMA(1,0,1)(0,1,2)[12] intercept   : AIC=-445.305, Time=1.07 sec\n",
+      " ARIMA(1,0,1)(1,1,0)[12] intercept   : AIC=-439.764, Time=0.55 sec\n",
+      " ARIMA(1,0,1)(1,1,2)[12] intercept   : AIC=inf, Time=1.34 sec\n",
+      " ARIMA(1,0,0)(0,1,1)[12] intercept   : AIC=-442.847, Time=0.41 sec\n",
+      " ARIMA(2,0,1)(0,1,1)[12] intercept   : AIC=-446.292, Time=0.47 sec\n",
+      " ARIMA(1,0,2)(0,1,1)[12] intercept   : AIC=-445.571, Time=0.61 sec\n",
       " ARIMA(0,0,0)(0,1,1)[12] intercept   : AIC=-327.548, Time=0.18 sec\n",
-      " ARIMA(0,0,2)(0,1,1)[12] intercept   : AIC=-416.893, Time=0.40 sec\n",
-      " ARIMA(2,0,0)(0,1,1)[12] intercept   : AIC=-448.052, Time=0.40 sec\n",
+      " ARIMA(0,0,2)(0,1,1)[12] intercept   : AIC=-416.893, Time=0.38 sec\n",
+      " ARIMA(2,0,0)(0,1,1)[12] intercept   : AIC=-448.052, Time=0.37 sec\n",
       " ARIMA(2,0,0)(0,1,0)[12] intercept   : AIC=-417.189, Time=0.07 sec\n",
-      " ARIMA(2,0,0)(1,1,1)[12] intercept   : AIC=-445.296, Time=0.59 sec\n",
-      " ARIMA(2,0,0)(0,1,2)[12] intercept   : AIC=-446.060, Time=1.13 sec\n",
-      " ARIMA(2,0,0)(1,1,0)[12] intercept   : AIC=-440.423, Time=0.69 sec\n",
-      " ARIMA(2,0,0)(1,1,2)[12] intercept   : AIC=inf, Time=1.29 sec\n",
-      " ARIMA(3,0,0)(0,1,1)[12] intercept   : AIC=-446.260, Time=0.64 sec\n",
-      " ARIMA(3,0,1)(0,1,1)[12] intercept   : AIC=-444.359, Time=0.75 sec\n",
-      " ARIMA(2,0,0)(0,1,1)[12]             : AIC=-440.546, Time=0.35 sec\n",
+      " ARIMA(2,0,0)(1,1,1)[12] intercept   : AIC=-445.296, Time=0.57 sec\n",
+      " ARIMA(2,0,0)(0,1,2)[12] intercept   : AIC=-446.060, Time=1.09 sec\n",
+      " ARIMA(2,0,0)(1,1,0)[12] intercept   : AIC=-440.423, Time=0.64 sec\n",
+      " ARIMA(2,0,0)(1,1,2)[12] intercept   : AIC=inf, Time=1.24 sec\n",
+      " ARIMA(3,0,0)(0,1,1)[12] intercept   : AIC=-446.260, Time=0.56 sec\n",
+      " ARIMA(3,0,1)(0,1,1)[12] intercept   : AIC=-444.359, Time=0.73 sec\n",
+      " ARIMA(2,0,0)(0,1,1)[12]             : AIC=-440.546, Time=0.33 sec\n",
       "\n",
       "Best model:  ARIMA(2,0,0)(0,1,1)[12] intercept\n",
-      "Total fit time: 13.687 seconds\n",
-      "                                      SARIMAX Results                                       \n",
-      "============================================================================================\n",
-      "Dep. Variable:                                    y   No. Observations:                  132\n",
-      "Model:             SARIMAX(2, 0, 0)x(0, 1, [1], 12)   Log Likelihood                 229.026\n",
-      "Date:                              Wed, 24 Apr 2024   AIC                           -448.052\n",
-      "Time:                                      14:17:50   BIC                           -434.114\n",
-      "Sample:                                  01-01-1949   HQIC                          -442.392\n",
-      "                                       - 12-01-1959                                         \n",
-      "Covariance Type:                                opg                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "intercept      0.0194      0.009      2.164      0.030       0.002       0.037\n",
-      "ar.L1          0.5992      0.083      7.251      0.000       0.437       0.761\n",
-      "ar.L2          0.2418      0.085      2.854      0.004       0.076       0.408\n",
-      "ma.S.L12      -0.5670      0.105     -5.413      0.000      -0.772      -0.362\n",
-      "sigma2         0.0012      0.000      8.188      0.000       0.001       0.002\n",
-      "===================================================================================\n",
-      "Ljung-Box (L1) (Q):                   0.00   Jarque-Bera (JB):                 6.13\n",
-      "Prob(Q):                              0.99   Prob(JB):                         0.05\n",
-      "Heteroskedasticity (H):               0.36   Skew:                             0.08\n",
-      "Prob(H) (two-sided):                  0.00   Kurtosis:                         4.10\n",
-      "===================================================================================\n",
-      "\n",
-      "Warnings:\n",
-      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+      "Total fit time: 12.958 seconds\n"
      ]
     }
    ],
@@ -587,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -604,8 +578,8 @@
       "============================================================================================\n",
       "Dep. Variable:                                    y   No. Observations:                  132\n",
       "Model:             SARIMAX(2, 0, 0)x(0, 1, [1], 12)   Log Likelihood                 229.026\n",
-      "Date:                              Wed, 24 Apr 2024   AIC                           -448.052\n",
-      "Time:                                      14:18:30   BIC                           -434.114\n",
+      "Date:                              Fri, 26 Apr 2024   AIC                           -448.052\n",
+      "Time:                                      18:05:09   BIC                           -434.114\n",
       "Sample:                                  01-01-1949   HQIC                          -442.392\n",
       "                                       - 12-01-1959                                         \n",
       "Covariance Type:                                opg                                         \n",
@@ -643,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -707,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
