--- a/examples/24-tfidf/03-vectorizer.ipynb
+++ b/examples/24-tfidf/03-vectorizer.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CountVectorizer?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +211,7 @@
        "Is this the first document?              1      0     1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +360,7 @@
        "Is this the first document?              1      0     1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "словарь: 13 слов\n",
+      "словарь: 22 слов\n",
       "\n"
      ]
     },
@@ -409,22 +418,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>and</th>\n",
        "      <th>and this</th>\n",
+       "      <th>document</th>\n",
        "      <th>document is</th>\n",
+       "      <th>first</th>\n",
        "      <th>first document</th>\n",
+       "      <th>is</th>\n",
        "      <th>is the</th>\n",
        "      <th>is this</th>\n",
-       "      <th>second document</th>\n",
+       "      <th>one</th>\n",
+       "      <th>...</th>\n",
+       "      <th>the</th>\n",
        "      <th>the first</th>\n",
        "      <th>the second</th>\n",
        "      <th>the third</th>\n",
+       "      <th>third</th>\n",
        "      <th>third one</th>\n",
+       "      <th>this</th>\n",
        "      <th>this document</th>\n",
        "      <th>this is</th>\n",
        "      <th>this the</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sentence</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -446,13 +471,21 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -460,15 +493,23 @@
        "    <tr>\n",
        "      <th>This document is the second document.</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -476,13 +517,21 @@
        "    <tr>\n",
        "      <th>And this is the third one.</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -496,57 +545,75 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>4 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       and this  document is  first document  \\\n",
-       "Sentence                                                                       \n",
-       "This is the first document.                   0            0               1   \n",
-       "This document is the second document.         0            1               0   \n",
-       "And this is the third one.                    1            0               0   \n",
-       "Is this the first document?                   0            0               1   \n",
+       "                                       and  and this  document  document is  \\\n",
+       "Sentence                                                                      \n",
+       "This is the first document.              0         0         1            0   \n",
+       "This document is the second document.    0         0         2            1   \n",
+       "And this is the third one.               1         1         0            0   \n",
+       "Is this the first document?              0         0         1            0   \n",
        "\n",
-       "                                       is the  is this  second document  \\\n",
-       "Sentence                                                                  \n",
-       "This is the first document.                 1        0                0   \n",
-       "This document is the second document.       1        0                1   \n",
-       "And this is the third one.                  1        0                0   \n",
-       "Is this the first document?                 0        1                0   \n",
-       "\n",
-       "                                       the first  the second  the third  \\\n",
-       "Sentence                                                                  \n",
-       "This is the first document.                    1           0          0   \n",
-       "This document is the second document.          0           1          0   \n",
-       "And this is the third one.                     0           0          1   \n",
-       "Is this the first document?                    1           0          0   \n",
-       "\n",
-       "                                       third one  this document  this is  \\\n",
+       "                                       first  first document  is  is the  \\\n",
        "Sentence                                                                   \n",
-       "This is the first document.                    0              0        1   \n",
-       "This document is the second document.          0              1        0   \n",
-       "And this is the third one.                     1              0        1   \n",
-       "Is this the first document?                    0              0        0   \n",
+       "This is the first document.                1               1   1       1   \n",
+       "This document is the second document.      0               0   1       1   \n",
+       "And this is the third one.                 0               0   1       1   \n",
+       "Is this the first document?                1               1   1       0   \n",
        "\n",
-       "                                       this the  \n",
-       "Sentence                                         \n",
-       "This is the first document.                   0  \n",
-       "This document is the second document.         0  \n",
-       "And this is the third one.                    0  \n",
-       "Is this the first document?                   1  "
+       "                                       is this  one  ...  the  the first  \\\n",
+       "Sentence                                             ...                   \n",
+       "This is the first document.                  0    0  ...    1          1   \n",
+       "This document is the second document.        0    0  ...    1          0   \n",
+       "And this is the third one.                   0    1  ...    1          0   \n",
+       "Is this the first document?                  1    0  ...    1          1   \n",
+       "\n",
+       "                                       the second  the third  third  \\\n",
+       "Sentence                                                              \n",
+       "This is the first document.                     0          0      0   \n",
+       "This document is the second document.           1          0      0   \n",
+       "And this is the third one.                      0          1      1   \n",
+       "Is this the first document?                     0          0      0   \n",
+       "\n",
+       "                                       third one  this  this document  \\\n",
+       "Sentence                                                                \n",
+       "This is the first document.                    0     1              0   \n",
+       "This document is the second document.          0     1              1   \n",
+       "And this is the third one.                     1     1              0   \n",
+       "Is this the first document?                    0     1              0   \n",
+       "\n",
+       "                                       this is  this the  \n",
+       "Sentence                                                  \n",
+       "This is the first document.                  1         0  \n",
+       "This document is the second document.        0         0  \n",
+       "And this is the third one.                   1         0  \n",
+       "Is this the first document?                  0         1  \n",
+       "\n",
+       "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +621,7 @@
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "tf_model = CountVectorizer(ngram_range=(2,2)).fit(docs)\n",
+    "tf_model = CountVectorizer(ngram_range=(1,2)).fit(docs)\n",
     "\n",
     "tf_table(\n",
     "    x = tf_model.transform(docs).todense(),\n",
@@ -572,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +763,7 @@
        "Is this the first document?              0.00  0.38   0.00  0.38  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +916,7 @@
        "Is this the first document?              0.00  0.38   0.00  0.38  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
