--- a/examples/24-tfidf/07-tf-clust.ipynb
+++ b/examples/24-tfidf/07-tf-clust.ipynb
@@ -81,14 +81,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2681</th>\n",
-       "      <td>Ученые решили установить, почему в организме человека образовываются раковые клетки и как они себя ведут.\\n\\nБлагодаря очередному исследованию ученым удалось установить, как связан жир в организме...</td>\n",
-       "      <td>science</td>\n",
+       "      <th>2868</th>\n",
+       "      <td>10:49 - 13.12.2016\\n\\nКомпания SsangYong обнародовала данные о стоимости и комплектациях кроссовера Tivoli для рынка РФ. Цены на автомобиль стартуют от 999 тысяч рублей.\\n\\nДлина кроссовера в стан...</td>\n",
+       "      <td>auto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3138</th>\n",
-       "      <td>Трибуна (Сыктывкар) Схватили за язык. Слово чиновника не воробей Комиссия\\nадминистрации Главы и правительства Коми признала, что сотрудник администрации\\nРоман Квашнев нарушил законодательство в ...</td>\n",
-       "      <td>incident</td>\n",
+       "      <th>149</th>\n",
+       "      <td>Добавление незаменимой аминокислоты в пищу увеличивает мышечную\\nмассу Отлаженный механизм синтеза-распада мышечной ткани начинает давать\\nсбой.У старых крыс, в отличие от молодых, прием пищи не о...</td>\n",
+       "      <td>health</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -96,12 +96,12 @@
       ],
       "text/plain": [
        "                                                                                                                                                                                                         text  \\\n",
-       "2681  Ученые решили установить, почему в организме человека образовываются раковые клетки и как они себя ведут.\\n\\nБлагодаря очередному исследованию ученым удалось установить, как связан жир в организме...   \n",
-       "3138  Трибуна (Сыктывкар) Схватили за язык. Слово чиновника не воробей Комиссия\\nадминистрации Главы и правительства Коми признала, что сотрудник администрации\\nРоман Квашнев нарушил законодательство в ...   \n",
+       "2868  10:49 - 13.12.2016\\n\\nКомпания SsangYong обнародовала данные о стоимости и комплектациях кроссовера Tivoli для рынка РФ. Цены на автомобиль стартуют от 999 тысяч рублей.\\n\\nДлина кроссовера в стан...   \n",
+       "149   Добавление незаменимой аминокислоты в пищу увеличивает мышечную\\nмассу Отлаженный механизм синтеза-распада мышечной ткани начинает давать\\nсбой.У старых крыс, в отличие от молодых, прием пищи не о...   \n",
        "\n",
-       "           tag  \n",
-       "2681   science  \n",
-       "3138  incident  "
+       "         tag  \n",
+       "2868    auto  \n",
+       "149   health  "
       ]
      },
      "metadata": {},
@@ -286,8 +286,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.31 s, sys: 31.1 ms, total: 4.34 s\n",
-      "Wall time: 4.34 s\n"
+      "CPU times: user 4.29 s, sys: 58.9 ms, total: 4.35 s\n",
+      "Wall time: 4.35 s\n"
      ]
     }
    ],
@@ -510,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 83.5 ms, sys: 55.8 ms, total: 139 ms\n",
-      "Wall time: 170 ms\n"
+      "CPU times: user 87.9 ms, sys: 23.4 ms, total: 111 ms\n",
+      "Wall time: 111 ms\n"
      ]
     }
    ],
@@ -561,31 +561,31 @@
        "      <th>0</th>\n",
        "      <td>-1</td>\n",
        "      <td>465</td>\n",
-       "      <td>social reclama woman tech incident health realty culture economics auto politics sport science</td>\n",
+       "      <td>health incident sport politics auto science economics reclama realty culture woman tech social</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>921</td>\n",
-       "      <td>social reclama woman tech incident health realty culture economics auto sport politics science</td>\n",
+       "      <td>health incident sport politics auto science economics reclama realty culture woman tech social</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>25</td>\n",
-       "      <td>tech culture economics auto sport politics science</td>\n",
+       "      <td>sport politics auto science economics culture tech</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>17</td>\n",
-       "      <td>social tech culture economics auto politics</td>\n",
+       "      <td>auto politics economics culture tech social</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>120</td>\n",
-       "      <td>social woman incident tech culture economics auto politics sport science</td>\n",
+       "      <td>incident sport politics auto science economics culture woman tech social</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -643,11 +643,11 @@
        "82          81     14   \n",
        "\n",
        "                                                                                              tags  \n",
-       "0   social reclama woman tech incident health realty culture economics auto politics sport science  \n",
-       "1   social reclama woman tech incident health realty culture economics auto sport politics science  \n",
-       "2                                               tech culture economics auto sport politics science  \n",
-       "3                                                      social tech culture economics auto politics  \n",
-       "4                         social woman incident tech culture economics auto politics sport science  \n",
+       "0   health incident sport politics auto science economics reclama realty culture woman tech social  \n",
+       "1   health incident sport politics auto science economics reclama realty culture woman tech social  \n",
+       "2                                               sport politics auto science economics culture tech  \n",
+       "3                                                      auto politics economics culture tech social  \n",
+       "4                         incident sport politics auto science economics culture woman tech social  \n",
        "..                                                                                             ...  \n",
        "78                                                                                        incident  \n",
        "79                                                                                        incident  \n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
