--- a/examples/24-tfidf/01-token.ipynb
+++ b/examples/24-tfidf/01-token.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,14 +474,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+      "NLTK Downloader\n",
+      "---------------------------------------------------------------------------\n",
+      "    d) Download   l) List    u) Update   c) Config   h) Help   q) Quit\n",
+      "---------------------------------------------------------------------------\n",
+      "Downloader> l\n",
+      "\n",
+      "Packages:\n",
+      "  [ ] abc................. Australian Broadcasting Commission 2006\n",
+      "  [ ] alpino.............. Alpino Dutch Treebank\n",
+      "  [ ] averaged_perceptron_tagger Averaged Perceptron Tagger\n",
+      "  [*] averaged_perceptron_tagger_ru Averaged Perceptron Tagger (Russian)\n",
+      "  [ ] basque_grammars..... Grammars for Basque\n",
+      "  [ ] bcp47............... BCP-47 Language Tags\n",
+      "  [ ] biocreative_ppi..... BioCreAtIvE (Critical Assessment of Information\n",
+      "                           Extraction Systems in Biology)\n",
+      "  [ ] bllip_wsj_no_aux.... BLLIP Parser: WSJ Model\n",
+      "  [ ] book_grammars....... Grammars from NLTK Book\n",
+      "  [ ] brown............... Brown Corpus\n",
+      "  [ ] brown_tei........... Brown Corpus (TEI XML Version)\n",
+      "  [ ] cess_cat............ CESS-CAT Treebank\n",
+      "  [ ] cess_esp............ CESS-ESP Treebank\n",
+      "  [ ] chat80.............. Chat-80 Data Files\n",
+      "  [ ] city_database....... City Database\n",
+      "  [ ] cmudict............. The Carnegie Mellon Pronouncing Dictionary (0.6)\n",
+      "  [ ] comparative_sentences Comparative Sentence Dataset\n",
+      "  [ ] comtrans............ ComTrans Corpus Sample\n",
+      "  [ ] conll2000........... CONLL 2000 Chunking Corpus\n",
+      "Hit Enter to continue: q\n",
+      "\n",
+      "---------------------------------------------------------------------------\n",
+      "    d) Download   l) List    u) Update   c) Config   h) Help   q) Quit\n",
+      "---------------------------------------------------------------------------\n",
+      "Downloader> q\n"
      ]
     },
     {
@@ -490,7 +522,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
